@@ -1,3 +1,8 @@
+2008-05-01 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Do not use "else ifeq" in Makefile, since make is
+	  not happy with that on Windows.
+
 2008-01-23 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add Makefile targets 'extension-files', 'oxt' and
